# Raspberry-Pi-Zero-Miniaudio

./: .gitignore  CMakeLists.txt  PI.cmake
include/: FFT.h  fft.h  mAudio.hpp  miniaudio.h
src/: fft.cpp  lodepng.cpp  mAudio working record.cpp  mAudio.cpp  main.cpp  main3.cpp  main4.cpp
